--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.28",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +30,7 @@
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.3.1",
